# an0nn30-rusty_conch

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  config.example.toml  phase_next_plugin_docked_view.md
.github/workflows/: ci.yml  release.yml
crates/conch_app/: Cargo.toml
crates/conch_app/icons/: conch.icns
crates/conch_app/src/: app.rs  dialogs.rs  extra_window.rs  icons.rs  input.rs  ipc.rs  macos_locale.rs  macos_menu.rs  main.rs  mouse.rs  plugins.rs  sessions.rs  shortcuts.rs  sidebar_handler.rs  ssh.rs  state.rs  tab_bar.rs  ui_theme.rs  watcher.rs  window_state.rs
crates/conch_core/src/: config.rs
crates/conch_plugin/src/: bus.rs  host_api.rs  lib.rs  manager.rs  runner.rs
crates/conch_plugin_sdk/src/: host_api.rs  lib.rs  session.rs  widgets.rs
crates/conch_remote/src/: config.rs  lib.rs  ssh.rs  tunnel.rs
crates/conch_session/: Cargo.toml
crates/conch_session/src/: lib.rs  pty.rs  sftp.rs
crates/conch_tauri/: Cargo.toml  build.rs
crates/conch_vault/: Cargo.toml
crates/conch_vault/src/: encryption.rs  lib.rs  model.rs
docs/: plugin-sdk.md  plugin-security-model.md  plugin_extension.md  plugins.md
editors/vscode/: README.md  install.sh  package-lock.json  package.json
examples/plugins/: demo-bottom-panel.lua  encrypt-decrypt.lua  lua-tmux-manager.lua  port-scanner.lua  system-info.lua
packaging/linux/: postinst  postrm
packaging/macos/: Info.plist
packaging/windows/: conch.wxs
plugins/: lua-clipboard-permissions.lua
plugins/conch-files/: README.md
plugins/java-hello/: MANIFEST.MF
scripts/: check_leaks.sh
(+107 files in other folders)
