[package]
name = "conch_vault"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
log = { workspace = true }
thiserror = "2"
bincode = "1"

[dev-dependencies]
tempfile = "3"
