[package]
name = "conch_vault"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
log = { workspace = true }
thiserror = "2"
bincode = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3"
